tests/resource/valid/control_flow/assign_if.mamba
def my_var := if True then
    print("then")
    10
else
    print("else")
    20
