tests/resource/invalid/type/control_flow/variable_defined_in_then.mamba
if False then
    def x := 10
else
    print("something")

x + 10
